KDirSelectDialog: Strip trailing slash for hidden check

If there's a trailing slash fileName return an empty string.
BUG:510658
FIXED-IN:6.4.6


(cherry picked from commit fce65181729f862cead091d6bab66ee10fa9882c)

Co-authored-by: David Redondo <kde@david-redondo.de>